[workspace]
members = ["day*", "aoc"]
resolver = "2"

[workspace.package]
authors = ["Sven Groot"]
version = "2024.0.0"

[workspace.dependencies]
anyhow = "1.0"
bitvec = "1.0.1"
colored = "2.0.4"
funty = "2.0.0"
num = "0.4"
priority-queue = "1.3.2"
radix_fmt = "1.0.0"
text_io = "0.1"
thiserror = "1.0"
aoc = { path = "aoc" }
