[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec.workspace = true
funty.workspace = true
ndarray = "0.15.6"
num.workspace = true
priority-queue.workspace = true
thiserror.workspace = true
